--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>VISALP</title>
 		%sveltekit.head%
 	</head>
 	<body class="bg-[#FAFAFA]" data-sveltekit-preload-data="hover">
